@@ -1,0 +1,1 @@
+sync=menu syndicate ; getindex ; fetch ; schedule --put outbound ; post ; buildindex
