@@ -1,0 +1,1 @@
+archive=http://syndie.i2p.net/archive/
